# lightningPlusPlus

./: .gitignore  BENCHMARK_PLAN.md  BENCHMARK_RESULTS.md  BOTTLENECK_REPORT.md  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  ClientHandlerTask.cpp  ClientRequestHandler.cpp  Doxyfile  HeadersParser.cpp  HttpRequest.cpp  HttpResponse.cpp  HttpResponseBuilder.cpp  HttpServer.cpp  ISSUES_REPORT.md  LowLevelApiException.cpp  Makefile  NonblockingClientManagerTask.cpp  OpensslErrorQueueException.cpp  PlainClient.cpp  PlainServer.cpp  PlainStream.cpp  README.md  SSLClient.cpp  SSLServer.cpp  SSLStream.cpp  ServerBuilder.cpp  SmartResource.cpp  StaticFile.cpp  Strings.cpp  TaskExecutor.cpp  UriMapper.cpp  WSAInitializer.cpp  architecture.md  bench-strace.sh  cmake_install.cmake  compile_commands.json  sockets.cpp  source.cpp  (+4 more)
cert/: CA.key  CA.pem  CA.srl  cert.crt  key.pem
cert/localhost/: localhost.csr  localhost.decrypted.key  localhost.key
doxygen/html/: _http_request_8cpp.html  _http_request_8cpp_8o_8d.html  _http_response_8cpp.html  _http_response_8cpp_8o_8d.html  _http_response_builder_8cpp.html  _http_response_builder_8cpp_8o_8d.html  _http_server_8cpp.html  _http_server_8cpp_8o_8d.html  _low_level_api_exception_8cpp.html  _low_level_api_exception_8cpp_8o_8d.html  _r_e_a_d_m_e_8md.html  _s_s_l_client_8cpp.html  _s_s_l_client_8cpp_8o_8d.html  _s_s_l_server_8cpp.html  _s_s_l_server_8cpp_8o_8d.html  _s_s_l_stream_8cpp.html  _s_s_l_stream_8cpp_8o_8d.html  _smart_resource_8cpp.html  _smart_resource_8cpp_8o_8d.html  _static_file_8cpp.html  _static_file_8cpp.js  _static_file_8cpp_8o_8d.html  _strings_8cpp.html  _strings_8cpp.js  _strings_8cpp_8o_8d.html  _task_executor_8cpp_8o_8d.html  _uri_mapper_8cpp.html  _uri_mapper_8cpp_8o_8d.html  annotated.html  annotated_dup.js  build_2_c_make_files_23_822_81_2_compiler_id_c_2_c_make_c_compiler_id_8c.html  build_2_c_make_files_23_822_81_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp.html  build_2_c_make_files_2http_8dir_2source_8cpp_8o_8d.html  classes.html  classlightning_1_1_http_request-members.html  classlightning_1_1_http_request.html  classlightning_1_1_http_request.js  classlightning_1_1_http_response-members.html  classlightning_1_1_http_response.html  classlightning_1_1_http_response.js  (+224 more)
doxygen/latex/: _http_request_8cpp.tex  _http_request_8cpp_8o_8d.tex  _http_response_8cpp.tex  _http_response_8cpp_8o_8d.tex  _http_response_builder_8cpp.tex  _http_response_builder_8cpp_8o_8d.tex  _http_server_8cpp.tex  _http_server_8cpp_8o_8d.tex  _low_level_api_exception_8cpp.tex  _low_level_api_exception_8cpp_8o_8d.tex  _s_s_l_client_8cpp.tex  _s_s_l_client_8cpp_8o_8d.tex  _s_s_l_server_8cpp.tex  _s_s_l_server_8cpp_8o_8d.tex  _s_s_l_stream_8cpp.tex  _s_s_l_stream_8cpp_8o_8d.tex  _smart_resource_8cpp.tex  _smart_resource_8cpp_8o_8d.tex  _static_file_8cpp.tex  _static_file_8cpp_8o_8d.tex  _strings_8cpp.tex  _strings_8cpp_8o_8d.tex  _task_executor_8cpp_8o_8d.tex  _uri_mapper_8cpp.tex  _uri_mapper_8cpp_8o_8d.tex  annotated.tex  build_2_c_make_files_23_822_81_2_compiler_id_c_2_c_make_c_compiler_id_8c.tex  build_2_c_make_files_23_822_81_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp.tex  build_2_c_make_files_2http_8dir_2source_8cpp_8o_8d.tex  classlightning_1_1_http_request.tex  classlightning_1_1_http_response.tex  classlightning_1_1_http_response_builder.tex  classlightning_1_1_http_server.tex  classlightning_1_1_http_server_1_1_resolve_and_send.tex  classlightning_1_1_low_level_api_exception.eps  classlightning_1_1_low_level_api_exception.tex  classlightning_1_1_s_s_l_client.tex  classlightning_1_1_s_s_l_server.tex  classlightning_1_1_task_executor.tex  classlightning_1_1_uri_mapper.tex  (+87 more)
lightning/: HeadersParser.hpp  HttpProtocol.hpp  IClient.hpp  LowLevelApiException.hpp  LowLevelSocketServer.hpp  MPMCQueue.hpp  MPMCTaskExecutor.hpp  OpensslErrorQueueException.hpp  PlainClient.hpp  PlainServer.hpp  SSLClient.hpp  SSLServer.hpp  SmartResource.hpp  TaskExecutor.hpp  WSAInitializer.hpp  lightning.hpp  sockets.hpp
lightning/handlers/: StaticFile.hpp
lightning/httpServer/: ClientHandlerTask.hpp  ClientRequestHandler.hpp  FdChannels.hpp  HttpServer.hpp  MiddlewareContainer.hpp  NonblockingClientManagerTask.hpp  ServerBuilder.hpp
lightning/middlewares/: addHeaderToResponse.hpp  middlewares.hpp  useFolder.hpp
lightning/moodycamel/: concurrentqueue.h
lightning/request/: FrameworkInfo.hpp  HttpRequest.hpp
lightning/response/: HttpResponse.hpp  HttpResponseBuilder.hpp  StatusLine.hpp
nlohmann/: json.hpp
tests/: benchmark.lua  strace-benchmark.sh  wrk-benchmark.sh
unit-tests/: CMakeLists.txt  HttpServerTest.hpp  source.cpp
unit-tests/data/: tests.cert
unit-tests/mocks/: MockClient.hpp  MockLowLevelSocketServer.hpp  MockStream.hpp  Mocks.hpp
(+100 files in other folders)
